基本补全所有页面，开始进入研发工作

--- a/projects/deepphpoop/deployments.js.html
+++ b/projects/deepphpoop/deployments.js.html
@@ -1,53 +1,46 @@
-<div class="box section section--first section--skinny">
-    <div class="preview-section">
-        <div class="preview-section__header">
-            <h4 class="g-heading-gamma">From Revision:</h4>
+<div class='box section section--first section--skinny'>
+    <div class='preview-section'>
+        <div class='preview-section__header'>
+            <h4 class='g-heading-gamma'>From Revision:</h4>
         </div>
-        <div class="preview-section__content">
+        <div class='preview-section__content'>
             <p>Start of time…</p>
         </div>
     </div>
-    <div class="preview-section">
-        <div class="preview-section__header">
-            <h4 class="g-heading-gamma">To Revision:</h4>
+    <div class='preview-section'>
+        <div class='preview-section__header'>
+            <h4 class='g-heading-gamma'>To Revision:</h4>
         </div>
-        <div class="preview-section__content">
-            <p><a class="commit-link" href="https://github.com/shukai0828/DeepPHPOOP/commit/a04971d1dd5924b5d0bc71de2ab9d2e31f46ff9d" rel="external" title="a04971d1dd5924b5d0bc71de2ab9d2e31f46ff9d">a04971d1dd5924b5d0bc71de2ab9d2e31f46ff9d</a>
-            </p>
+        <div class='preview-section__content'>
+            <p><a class="commit-link" href="https://github.com/shukai0828/DeepPHPOOP/commit/a04971d1dd5924b5d0bc71de2ab9d2e31f46ff9d" rel="external" title="a04971d1dd5924b5d0bc71de2ab9d2e31f46ff9d">a04971d1dd5924b5d0bc71de2ab9d2e31f46ff9d</a></p>
         </div>
-        <div class="preview-section__content">
+        <div class='preview-section__content'>
             <p>丢弃操作方面的尝试</p>
         </div>
-        <div class="preview-section__footer">
+        <div class='preview-section__footer'>
             <p><a href="mailto:">赵淑楷</a>, August 09, 2014 07:37</p>
         </div>
     </div>
-    <div class="content-block u-margin-top">
-        <h4 class="g-heading-gamma">Servers</h4>
-
+    <div class='content-block u-margin-top'>
+        <h4 class='g-heading-gamma'>Servers</h4>
         <p>RoyalWebHosting</p>
-        <h4 class="g-heading-gamma">Repository</h4>
-
-        <p class="u-text-break">https://github.com/shukai0828/DeepPHPOOP.git</p>
+        <h4 class='g-heading-gamma'>Repository</h4>
+        <p class='u-text-break'>git://github.com/shukai0828/DeepPHPOOP.git</p>
     </div>
 </div>
-
-<div class="box section section--first section--skinny">
-    <h2 class="g-heading-beta">RoyalWebHosting</h2>
-
-    <p class="form-paragraph text--small text--italic g-text-subtle">(1770006@f13-preview.royalwebhosting.net)</p>
-
-    <h3 class="g-heading-gamma">Main Repository</h3>
-
-    <div class="preview-section u-margin-top">
-        <div class="preview-section__header">
-            <h4 class="g-heading-gamma">To be uploaded…</h4>
+<div class='box section section--first section--skinny'>
+    <h2 class='g-heading-beta'>RoyalWebHosting</h2>
+    <p class='form-paragraph text--small text--italic g-text-subtle'>(1770006@f13-preview.royalwebhosting.net)</p>
+    <h3 class='g-heading-gamma'>Main Repository</h3>
+    <div class='preview-section u-margin-top'>
+        <div class='preview-section__header'>
+            <h4 class='g-heading-gamma'>To be uploaded…</h4>
         </div>
-        <table class="table">
+        <table class='table'>
             <tbody></tbody>
-            <tbody>
             <tr>
                 <td>
+                    <li>README.md</li>
                 </td>
             </tr>
             <tr>
@@ -105,17 +98,16 @@
                     <li>charpter03/main.php</li>
                 </td>
             </tr>
-            </tbody>
         </table>
     </div>
-    <div class="preview-section">
-        <div class="preview-section__header">
-            <h4 class="g-heading-gamma">To be removed…</h4>
+    <div class='preview-section'>
+        <div class='preview-section__header'>
+            <h4 class='g-heading-gamma'>To be removed…</h4>
         </div>
-        <table class="table">
+        <table class='table'>
             <tbody>
             <tr>
-                <td class="u-text-center g-text-subtle">
+                <td class='u-text-center g-text-subtle'>
                     No files will be removed in this deployment.
                 </td>
             </tr>
@@ -123,17 +115,14 @@
         </table>
     </div>
 
-    <div class="preview-section">
-        <div class="preview-section__header">
-            <h4 class="g-heading-gamma">Configuration files to be uploaded…</h4>
+    <div class='preview-section'>
+        <div class='preview-section__header'>
+            <h4 class='g-heading-gamma'>Configuration files to be uploaded…</h4>
         </div>
-        <table class="table">
+        <table class='table'>
             <tbody>
             <tr>
-                <td>
-                    <span class="g-text-code">deployment/config.ini</span>
-                    <span class="text--subtle text--micro">(489 Bytes)</span>
-                </td>
+                <td class='u-text-center g-text-subtle'>No config files will be uploaded in this deployment.</td>
             </tr>
             </tbody>
         </table>
