--- a/projects/deepphpoop/server_groups/index.html
+++ b/projects/deepphpoop/server_groups/index.html
@@ -10,13 +10,8 @@
     </tr>
     </thead>
     <tbody>
-    <tr data-id='b9f12823-d554-8315-3307-02b09a3217f3' data-name='TestingGroup'>
-        <td>TestingGroup</td>
-        <td></td>
-        <td class='table__actions u-text-right'>
-            <a class="js-edit-server-group" href="/projects/deepphpoop/server_groups/b9f12823-d554-8315-3307-02b09a3217f3/edit"><img alt="Edit Icon" class="icon" src="/assets/images/icon-pencil-c3c83e027bd471c46571ffc8a6914974.svg" /></a>
-            <a class="js-delete-server-group" data-confirm="Are you sure you wish to remove this server group?" data-method="delete" href="/projects/deepphpoop/server_groups/b9f12823-d554-8315-3307-02b09a3217f3" rel="nofollow"><img alt="Delete Icon" class="icon" src="/assets/images/icon-trash-4d0e03bf959145d64a6c5a9905127c05.svg" /></a>
-        </td>
+    <tr>
+        <td class='g-text-subtle u-text-center' colspan='3'>No server groups have been created for this project.</td>
     </tr>
     </tbody>
 </table>
