--- a/dashboards_list.html
+++ b/dashboards_list.html
@@ -2,28 +2,26 @@
 <html lang='en'>
 <head>
     <meta content="authenticity_token" name="csrf-param" />
-    <meta content="laBOjZbXcHz2Vlufb95oRysGrNnebQP1pBO7NWuJXns=" name="csrf-token" />
+    <meta content="4KixzdUUL2+E/WLOW6xvPIK5ydNR5egmlK76+SB1KKk=" name="csrf-token" />
     <meta charset='utf-8'>
     <meta content='width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1' name='viewport'>
-    <title>DeepPHPOOP - treetree - Deploy</title>
+    <title>treetree - Deploy</title>
     <link href="/assets/cloud.typography.com/7257492/624966/css/fonts.css" media="screen" rel="stylesheet" />
     <link href="/assets/application-c2577e410b34fa9f4ea1e85a71113b0f.css" media="screen" rel="stylesheet" />
     <link href='/images/favicon.png' rel='icon' style='image/png'>
-    <meta content='deepphpoop' name='project-id'>
-    <link href='/projects/deepphpoop/deployments.rss?token=u2c0ljxymnztvid2l99yx0wbogc8g3the4e3tkr7' rel='alternate' title='Deployment History for DeepPHPOOP' type='application/rss+xml'>
 </head>
-<body class='js-notifications-index'>
+<body class='js-dashboard-index'>
 <div class='header'>
     <div class='header__inner'>
         <div class='container'>
             <h1 class='branding'><a href="/">Deploy</a></h1>
             <nav class='main-menu'>
                 <ul class='inline-list'>
-                    <li class='inline-list__item main-menu__item'>
+                    <li class='inline-list__item is-active main-menu__item'>
                         <a class="main-menu__link" href="/"><img alt="Dashboard Icon" class="main-menu__icon" src="/assets/icon-dashboard-b7fc48923a8411a5354a81b66e34b692.svg" />
                             <span class='main-menu__text'>Dashboard</span>
                         </a></li>
-                    <li class='inline-list__item is-active main-menu__item'>
+                    <li class='inline-list__item main-menu__item'>
                         <a class="main-menu__link" href="/projects"><img alt="Projects Icon" class="main-menu__icon" src="/assets/icon-projects-f2e21fdd8c1a0dfc1b7e438396263705.svg" />
                             <span class='main-menu__text'>Projects</span>
                         </a></li>
@@ -60,106 +58,72 @@
         </div>
     </nav>
 </div>
-<div class='second-navigation js-nav-bar is-menu-closed'>
-    <div class='container u-clearfix'>
-        <div class='second-navigation__title'>
-            <a class="g-text-semibold" href="/projects/deepphpoop">DeepPHPOOP</a>
-        </div>
-        <a class="second-navigation__toggle js-toggle-menu" href="#"><img alt="Menu Icon" class="second-navigation__toggle-img second-navigation__toggle-img--open" src="/assets/icon-menu-2eb971600fbdab538bd350931cbd5fe8.svg" />
-            <img alt="Menu Icon" class="second-navigation__toggle-img second-navigation__toggle-img--hide" src="/assets/icon-hide-3ee2bdbbde6b0a782e4c8d23241bccf6.svg" />
-        </a><ul class='second-menu'>
-        <li class='second-menu__item'>
-            <a class="second-menu__link" href="/projects/deepphpoop/deployments">Deployments</a>
-        </li>
-        <li class='is-active is-dropdown second-menu__item'>
-            <a class="second-menu__link second-menu__link--dropdown" href="/projects/deepphpoop/edit">Settings</a>
-            <ul class='sub-menu box box--heavy'>
-                <li class='sub-menu__item'>
-                    <a class="sub-menu__link" href="/projects/deepphpoop/edit">General Settings</a>
-                </li>
-                <li class='sub-menu__item'>
-                    <a class="sub-menu__link" href="/projects/deepphpoop/servers">Servers &amp; Groups</a>
-                </li>
-                <li class='sub-menu__item'>
-                    <a class="sub-menu__link" href="/projects/deepphpoop/config_files">Config Files</a>
-                </li>
-                <li class='sub-menu__item'>
-                    <a class="sub-menu__link" href="/projects/deepphpoop/excluded_files">Excluded Files</a>
-                </li>
-                <li class='is-active sub-menu__item'>
-                    <a class="sub-menu__link" href="/projects/deepphpoop/notifications">Notifications</a>
-                </li>
-                <li class='sub-menu__item'>
-                    <a class="sub-menu__link" href="/projects/deepphpoop/commands">SSH Commands</a>
-                </li>
-            </ul>
-        </li>
-        <li class='second-menu__item'>
-            <a href="https://github.com/shukai0828/DeepPHPOOP/tree/master">Browse Repository</a>
-        </li>
-        <li class='second-menu__item'>
-            <a href="https://github.com/shukai0828/DeepPHPOOP/commits/master">View Commits</a>
-        </li>
-        <li class='second-menu__item second-menu__item--deploy'>
-            <a href="/projects/deepphpoop/deployments/new">Deploy Now</a>
-        </li>
-    </ul>
-    </div>
-</div>
 
-
-<div class='container'>
-    <div class='flash flash--spaced flash--neutral'>
-        <p>This project was last deployed 4 days ago to <strong>RoyalWebHosting</strong>. <a href="/projects/deepphpoop/deployments/6ac8f26c-17b6-8610-a1a5-8d6c240e3d0f">View details</a>.</p>
-    </div>
-
-</div>
 <div class='container clearfix'>
 
-    <div class='section section--first section--with-create box'>
+    <div class='box section section--first'>
         <div class='page-header'>
-            <h2 class='page-header__title g-heading-alpha'>Notifications</h2>
+            <h2 class='page-header__title g-heading-alpha'>Dashboard</h2>
             <p class='page-header__lead'>
-                You can add notifications here which will automatically alert third-party services about your deployment each time you deploy your project.
+                The dashboard shows the recent activity on your account along with a list of currently available projects.
             </p>
         </div>
-        <a class="button button--positive button--create section__create" href="/projects/deepphpoop/notifications/new" title="Configure a new type of notification"><img alt="Icon add" class="button__icon" src="/assets/icon-add-e0280f31016ead5fa85f6969fbd6f2db.svg" /></a>
     </div>
     <div class='content--constrained'>
-        <div class='section section--equal section--first box'>
-            <table class='table table--responsive'>
-                <thead>
-                <tr>
-                    <td>Description</td>
-                    <td>Counter</td>
-                    <td></td>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td class='u-text-center text--subtle text--italic' colspan='3'>No notifications have been set up for this project.</td>
-                </tr>
-                </tbody>
-            </table>
+        <div class='box section section--first section--skinny'>
+            <h3 class='g-heading-beta'>Recent Activity</h3>
+            <h4 class='g-heading-gamma feed-heading'>Today</h4>
+            <ul class='feed layout-list'>
+                <li class='feed-item feed-item--positive'>
+                    <a class="feed-item__inner clearfix" href="/projects/deepphpoop/deployments/f7fb1603-c57f-8182-c22b-f3030aafba08"><p class='feed-item__message'>
+                        <span class='text--semibold'>shukai zhao</span>
+                        deployed <mark class='g-text-code'>a04971d1</mark> to <em>RoyalWebHosting</em>
+                    </p>
+<span class='feed-item__project text--subtle text--italic' label='DeepPHPOOP'>
+DeepPHPOOP
+</span>
+                    </a></li>
+                <li class='feed-item feed-item--general'>
+                    <a class="feed-item__inner clearfix" href="/projects/deepphpoop/servers/4ad32a8a-def0-b4d6-d1b2-957ad447222c/edit"><p class='feed-item__message'>
+                        <span class='text--semibold'>Deploy</span>
+                        created a new FTP server called <em>RoyalWebHosting</em>
+                    </p>
+<span class='feed-item__project text--subtle text--italic' label='DeepPHPOOP'>
+DeepPHPOOP
+</span>
+                    </a></li>
+                <li class='feed-item feed-item--general'>
+                    <a class="feed-item__inner clearfix" href="/projects/deepphpoop"><p class='feed-item__message'>
+                        <span class='text--semibold'>shukai zhao</span>
+                        created a new project called <em>DeepPHPOOP</em>
+                    </p>
+<span class='feed-item__project text--subtle text--italic' label='DeepPHPOOP'>
+DeepPHPOOP
+</span>
+                    </a></li>
+            </ul>
         </div>
     </div>
     <div class='sidebar'>
         <div class='content-block'>
-            <h3 class='sidebar__heading g-heading-gamma'>Supported Services</h3>
-            <h4><a class="text--info" href="http://www.codebasehq.com/">Codebase</a></h4>
-            <p>You can make notifications to Codebase, the project management tool with built in repository hosting.</p>
-            <h4><a class="text--info" href="http://www.hipchat.com/">Hipchat</a></h4>
-            <p>Hipchat, the team collaboration chat system.</p>
-            <h4><a class="text--info" href="http://www.flowdock.com/">Flowdock</a></h4>
-            <p>Flowdock is a collaboration web app for technical teams.</p>
-            <h4><a class="text--info" href="http://www.newrelic.com/">New Relic</a></h4>
-            <p>New Relic allows you to profile the performance of your apps.</p>
-            <h4><a class="text--info" href="https://slack.com/">Slack</a></h4>
-            <p>Slack brings all your communication together in one place.</p>
-            <h4>HTTP Post</h4>
-            <p>Or your own services using HTTP Post notifications.</p>
+            <h3 class='sidebar__heading g-heading-gamma'>Your Projects</h3>
+        </div>
+        <ul class='project-list layout-list box js-starred-projects'>
+            <li class='project-list__item project-list__item--starred'>
+                <a class="project-list__action js-star-project" href="/projects/deepphpoop/star"><img alt="Icon star empty" class="project-list__icon project-list__star" src="/assets/icon-star-empty-983228f419b166694a1f89f859051c01.svg" title="Star Project" />
+                    <img alt="Icon star filled" class="project-list__icon project-list__unstar" src="/assets/icon-star-filled-16fc7e710d631c5bd1e26ae07ea4f816.svg" title="Unstar Project" />
+                </a><a class="project-list__link" href="/projects/deepphpoop">DeepPHPOOP</a>
+            </li>
+
+        </ul>
+        <ul class='box is-hidden js-unstarred-projects layout-list project-list'>
+
+        </ul>
+        <div class='content-block'>
+            <p><a class="text--micro text--link text--positive text--semibold" href="/projects/new">Create a new project →</a></p>
         </div>
     </div>
+
 
 </div>
 <div class='footer'>
@@ -205,8 +169,8 @@
                 <a class="feedback-list__link js-feedback-form" href="#">Report Bug</a>
                 <div class='feedback-bar__form'>
                     <h2 class='form-heading g-heading-gamma'>Report Bug</h2>
-                    <form accept-charset="UTF-8" action="/feedback/report_bug" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="laBOjZbXcHz2Vlufb95oRysGrNnebQP1pBO7NWuJXns=" /></div>
-                        <input id="url" name="url" type="hidden" value="https://treetree.beta.deployhq.com/projects/deepphpoop/notifications?action=index&amp;controller=notifications&amp;project_id=deepphpoop" />
+                    <form accept-charset="UTF-8" action="/feedback/report_bug" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="4KixzdUUL2+E/WLOW6xvPIK5ydNR5egmlK76+SB1KKk=" /></div>
+                        <input id="url" name="url" type="hidden" value="https://treetree.beta.deployhq.com/?action=index&amp;controller=dashboard" />
                         <div class='form-group'>
                             <label class="form-label" for="description">Describe Problem</label>
 <textarea class="textarea" id="description" name="description" rows="6">
@@ -227,7 +191,7 @@
                 <a class="feedback-list__link js-feedback-form" href="#">Feedback</a>
                 <div class='feedback-bar__form'>
                     <h2 class='form-heading g-heading-gamma'>Submit Feedback</h2>
-                    <form accept-charset="UTF-8" action="/feedback/feedback" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="laBOjZbXcHz2Vlufb95oRysGrNnebQP1pBO7NWuJXns=" /></div>
+                    <form accept-charset="UTF-8" action="/feedback/feedback" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="4KixzdUUL2+E/WLOW6xvPIK5ydNR5egmlK76+SB1KKk=" /></div>
                         <div class='form-group'>
                             <label class="form-label" for="summary">What do you think?</label>
 <textarea class="textarea" id="description" name="description" rows="6">
@@ -246,15 +210,15 @@
     </div>
 </div>
 
-<script src="/assets/cdn.viaduct.io/webpush.js"></script>
+<script src="//cdn.viaduct.io/webpush.js"></script>
 <script src="/assets/application-4490436fc5ec79a05e570d20adf462b5.js"></script>
 <script>
     //<![CDATA[
     window.Utility || (window.Utility = {});
-    Utility.RailsVars = {"user_timezone":"Etc/UTC","vwp_token":"13c9299896384ac5ac3cf68c","project":"deepphpoop"};
+    Utility.RailsVars = {"user_timezone":"Etc/UTC","vwp_token":"13c9299896384ac5ac3cf68c"};
 
     (function() {
-        window.$this = new (App.Notifications || App.Base)();
+        window.$this = new (App.Dashboard || App.Base)();
         if (typeof $this.index === 'function') {
             return $this.index.call();
         }
@@ -269,8 +233,8 @@
     atechIdentity.host = 'http://pt.justdeployit.com';
     atechIdentity.userKey = '3b2662a4-843b-798f-417b-5755dda2e195';
     atechIdentity.applicationKey = '2a9869df-7c90-3f32-0538-0bec6f4c4129';
-    atechIdentity.expiry = 1421311885;
-    atechIdentity.authHash = 'd6964c7bb6ab024279af775306532334212247c4';
+    atechIdentity.expiry = 1421375156;
+    atechIdentity.authHash = 'e58ad2c0017f918efcceafd3228361d479754b61';
     atechIdentity.getRemoteUserData();
     //]]>
 </script>
