--- a/deployments_index.html
+++ b/deployments_index.html
@@ -2,15 +2,15 @@
 <html lang='en'>
 <head>
     <meta content="authenticity_token" name="csrf-param" />
-    <meta content="q2fCH4M0FjDdtpSSQj3xONhD+YWdWZP1QZzNHL/e+NQ=" name="csrf-token" />
+    <meta content="4KixzdUUL2+E/WLOW6xvPIK5ydNR5egmlK76+SB1KKk=" name="csrf-token" />
     <meta charset='utf-8'>
     <meta content='width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1' name='viewport'>
     <title>DeepPHPOOP - treetree - Deploy</title>
-    <link href="/assets/css/fonts.css" media="screen" rel="stylesheet" />
-    <link href="/assets/css/application-5c814444b583f3014ed8cbb0e1cb3ff6.css" media="screen" rel="stylesheet" />
-    <link href='/assets/images/favicon.png' rel='icon' style='image:png'>
+    <link href="/assets/cloud.typography.com/7257492/624966/css/fonts.css" media="screen" rel="stylesheet" />
+    <link href="/assets/application-c2577e410b34fa9f4ea1e85a71113b0f.css" media="screen" rel="stylesheet" />
+    <link href='/images/favicon.png' rel='icon' style='image/png'>
     <meta content='deepphpoop' name='project-id'>
-    <link href='/servers_deployments.rss?token=u2c0ljxymnztvid2l99yx0wbogc8g3the4e3tkr7' rel='alternate' title='Deployment History for DeepPHPOOP' type='application/rss+xml'>
+    <link href='/projects/deepphpoop/deployments.rss?token=u2c0ljxymnztvid2l99yx0wbogc8g3the4e3tkr7' rel='alternate' title='Deployment History for DeepPHPOOP' type='application/rss+xml'>
 </head>
 <body class='js-deployments-index'>
 <div class='header'>
@@ -20,25 +20,25 @@
             <nav class='main-menu'>
                 <ul class='inline-list'>
                     <li class='inline-list__item main-menu__item'>
-                        <a class="main-menu__link" href="/"><img alt="Dashboard Icon" class="main-menu__icon" src="/assets/images/icon-dashboard-b7fc48923a8411a5354a81b66e34b692.svg" />
+                        <a class="main-menu__link" href="/"><img alt="Dashboard Icon" class="main-menu__icon" src="/assets/icon-dashboard-b7fc48923a8411a5354a81b66e34b692.svg" />
                             <span class='main-menu__text'>Dashboard</span>
                         </a></li>
                     <li class='inline-list__item is-active main-menu__item'>
-                        <a class="main-menu__link" href="/projects"><img alt="Projects Icon" class="main-menu__icon" src="/assets/images/icon-projects-f2e21fdd8c1a0dfc1b7e438396263705.svg" />
+                        <a class="main-menu__link" href="/projects"><img alt="Projects Icon" class="main-menu__icon" src="/assets/icon-projects-f2e21fdd8c1a0dfc1b7e438396263705.svg" />
                             <span class='main-menu__text'>Projects</span>
                         </a></li>
                     <li class='inline-list__item main-menu__item'>
-                        <a class="main-menu__link" href="/account"><img alt="Accounts Icon" class="main-menu__icon" src="/assets/images/icon-accounts-5573fc3b8b4b9b204d48ac0d24eb1799.svg" />
-                            <span class='main-menu__text'>Accounts</span>
+                        <a class="main-menu__link" href="/account"><img alt="Account icon" class="main-menu__icon" src="/assets/icon-accounts-5573fc3b8b4b9b204d48ac0d24eb1799.svg" />
+                            <span class='main-menu__text'>Account</span>
                         </a></li>
                     <li class='inline-list__item main-menu__item'>
-                        <a class="main-menu__link" href="/users"><img alt="Users Icon" class="main-menu__icon" src="/assets/images/icon-users-4d09e071ba1c6eed77353183a91a9e9c.svg" />
+                        <a class="main-menu__link" href="/users"><img alt="Users icon" class="main-menu__icon" src="/assets/icon-users-4d09e071ba1c6eed77353183a91a9e9c.svg" />
                             <span class='main-menu__text'>Users</span>
                         </a></li>
                 </ul>
             </nav>
             <div class='user-menu'>
-                <a class="js-toggle-nav" href="#" rel="nofollow"><img alt="shukai zhao&#39;s Avatar" class="user-menu__icon avatar-image" src="/assets/images/avatar.png" />
+                <a class="js-toggle-nav" href="#" rel="nofollow"><img alt="shukai zhao&#39;s Avatar" class="user-menu__icon avatar-image" src="/images/avatar.png" />
                 </a></div>
         </div>
     </div>
@@ -65,10 +65,10 @@
         <div class='second-navigation__title'>
             <a class="g-text-semibold" href="/projects/deepphpoop">DeepPHPOOP</a>
         </div>
-        <a class="second-navigation__toggle js-toggle-menu" href="#"><img alt="Menu Icon" class="second-navigation__toggle-img second-navigation__toggle-img--open" src="/assets/images/icon-menu-2eb971600fbdab538bd350931cbd5fe8.svg" />
-            <img alt="Menu Icon" class="second-navigation__toggle-img second-navigation__toggle-img--hide" src="/assets/images/icon-hide-3ee2bdbbde6b0a782e4c8d23241bccf6.svg" />
+        <a class="second-navigation__toggle js-toggle-menu" href="#"><img alt="Menu Icon" class="second-navigation__toggle-img second-navigation__toggle-img--open" src="/assets/icon-menu-2eb971600fbdab538bd350931cbd5fe8.svg" />
+            <img alt="Menu Icon" class="second-navigation__toggle-img second-navigation__toggle-img--hide" src="/assets/icon-hide-3ee2bdbbde6b0a782e4c8d23241bccf6.svg" />
         </a><ul class='second-menu'>
-        <li class='second-menu__item'>
+        <li class='is-active second-menu__item'>
             <a class="second-menu__link" href="/projects/deepphpoop/deployments">Deployments</a>
         </li>
         <li class='second-menu__item is-dropdown'>
@@ -94,15 +94,6 @@
                 </li>
             </ul>
         </li>
-        <li class='second-menu__item'>
-            <a href="https://github.com/shukai0828/DeepPHPOOP/tree/master">Browse Repository</a>
-        </li>
-        <li class='second-menu__item'>
-            <a href="https://github.com/shukai0828/DeepPHPOOP/commits/master">View Commits</a>
-        </li>
-        <li class='second-menu__item second-menu__item--deploy'>
-            <a href="/projects/deepphpoop/deployments/new">Deploy Now</a>
-        </li>
     </ul>
     </div>
 </div>
@@ -125,7 +116,7 @@
                 Click on the date to view details of the deployment.
             </p>
         </div>
-        <a class="button button--positive button--create section__create" href="/projects/deepphpoop/deployments/new" title="Deploy this project now"><img alt="Icon deploy" class="button__icon" src="/assets/images/icon-deploy-1d7c9b0fa9060ac75428ef942562ad49.svg" /></a>
+        <a class="button button--positive button--create section__create" href="/projects/deepphpoop/deployments/new" title="Deploy this project now"><img alt="Icon deploy" class="button__icon" src="/assets/icon-deploy-1d7c9b0fa9060ac75428ef942562ad49.svg" /></a>
     </div>
 
     <div class='section section--first section--skinny box'>
@@ -181,7 +172,7 @@
                 </ul>
             </div>
             <div class='column column--quarter'>
-                <a class="footer__branding" href="http://atechmedia.com"><img alt="Atechmedia logo" src="/assets/images/atechmedia-logo-0c4d3f231c616ea3edec833d64afb407.png" /></a>
+                <a class="footer__branding" href="http://atechmedia.com"><img alt="Atechmedia logo" src="/assets/atechmedia-logo-0c4d3f231c616ea3edec833d64afb407.png" /></a>
             </div>
         </div>
         <p class='footer__copyright'>&copy; 2015 <a href="http://atechmedia.com">aTech Media Limited</a>. All rights reserved.</p>
@@ -195,12 +186,12 @@
                 <a class="feedback-list__link js-feedback-form" href="#">Report Bug</a>
                 <div class='feedback-bar__form'>
                     <h2 class='form-heading g-heading-gamma'>Report Bug</h2>
-                    <form accept-charset="UTF-8" action="/feedback/report_bug" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="q2fCH4M0FjDdtpSSQj3xONhD+YWdWZP1QZzNHL/e+NQ=" /></div>
+                    <form accept-charset="UTF-8" action="/feedback/report_bug" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="4KixzdUUL2+E/WLOW6xvPIK5ydNR5egmlK76+SB1KKk=" /></div>
                         <input id="url" name="url" type="hidden" value="https://treetree.beta.deployhq.com/projects/deepphpoop/deployments?action=index&amp;controller=deployments&amp;project_id=deepphpoop" />
                         <div class='form-group'>
                             <label class="form-label" for="description">Describe Problem</label>
-												<textarea class="textarea" id="description" name="description" rows="6">
-												</textarea>
+<textarea class="textarea" id="description" name="description" rows="6">
+</textarea>
                             <p class='form-hint'>Please describe the bug you are experiencing.</p>
                         </div>
                         <div class='form-group'>
@@ -217,11 +208,11 @@
                 <a class="feedback-list__link js-feedback-form" href="#">Feedback</a>
                 <div class='feedback-bar__form'>
                     <h2 class='form-heading g-heading-gamma'>Submit Feedback</h2>
-                    <form accept-charset="UTF-8" action="/feedback/feedback" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="q2fCH4M0FjDdtpSSQj3xONhD+YWdWZP1QZzNHL/e+NQ=" /></div>
+                    <form accept-charset="UTF-8" action="/feedback/feedback" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="4KixzdUUL2+E/WLOW6xvPIK5ydNR5egmlK76+SB1KKk=" /></div>
                         <div class='form-group'>
                             <label class="form-label" for="summary">What do you think?</label>
-												<textarea class="textarea" id="description" name="description" rows="6">
-												</textarea>
+<textarea class="textarea" id="description" name="description" rows="6">
+</textarea>
                         </div>
                         <button class="button button--positive button--small" name="button" type="Submit">Send</button>
                     </form>
@@ -236,12 +227,12 @@
     </div>
 </div>
 
-<script src="/assets/js/cdn.viaduct.io/webpush.js"></script>
-<script src="/assets/js/application-e862757933c6bd8eeafac280f820e01c.js"></script>
+<script src="/assets/cdn.viaduct.io/webpush.js"></script>
+<script src="/assets/application-4490436fc5ec79a05e570d20adf462b5.js"></script>
 <script>
     //<![CDATA[
     window.Utility || (window.Utility = {});
-    Utility.RailsVars = {"user_timezone":null,"vwp_token":"13c9299896384ac5ac3cf68c","project":"deepphpoop"};
+    Utility.RailsVars = {"user_timezone":"Etc/UTC","vwp_token":"13c9299896384ac5ac3cf68c","project":"deepphpoop"};
 
     (function() {
         window.$this = new (App.Deployments || App.Base)();
@@ -252,19 +243,19 @@
 
     //]]>
 </script>
-<script src='/assets/js/identity/remote.js' type='text/javascript'></script>
+<script src='/assets/identity.atechmedia.com/javascripts/remote.js' type='text/javascript'></script>
 <script>
     //<![CDATA[
     var atechIdentity = new AtechIdentity();
     atechIdentity.host = 'http://pt.justdeployit.com';
     atechIdentity.userKey = '3b2662a4-843b-798f-417b-5755dda2e195';
     atechIdentity.applicationKey = '2a9869df-7c90-3f32-0538-0bec6f4c4129';
-    atechIdentity.expiry = 1420890396;
-    atechIdentity.authHash = '2bed090ede1a4ac5ba88877aca58cd4585e4384b';
+    atechIdentity.expiry = 1421371626;
+    atechIdentity.authHash = '1f95efaab2dfbd7eb71ef814f1fc92f8436b60b1';
     atechIdentity.getRemoteUserData();
     //]]>
 </script>
 
-<!--- Version 23fc98, served by vdtapp-531-8977-b20c049ef8 -->
+<!--- Version 4f2bf0, served by vdtapp-531-9175-535458ff20 -->
 </body>
 </html>
