--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang='en'>
 <head>
     <meta content="authenticity_token" name="csrf-param" />
-    <meta content="hCBCVjuHS1LiQhvPKI9TXQFfxx4W5W8ql3IgroD+9js=" name="csrf-token" />
+    <meta content="4KixzdUUL2+E/WLOW6xvPIK5ydNR5egmlK76+SB1KKk=" name="csrf-token" />
     <meta charset='utf-8'>
     <meta content='width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1' name='viewport'>
     <title>treetree - Deploy</title>
-    <link href="/assets/css/fonts.css" media="screen" rel="stylesheet" />
-    <link href="/assets/css/application-5c814444b583f3014ed8cbb0e1cb3ff6.css" media="screen" rel="stylesheet" />
-    <link href='/assets/images/favicon.png' rel='icon' style='image:png'>
+    <link href="/assets/cloud.typography.com/7257492/624966/css/fonts.css" media="screen" rel="stylesheet" />
+    <link href="/assets/application-c2577e410b34fa9f4ea1e85a71113b0f.css" media="screen" rel="stylesheet" />
+    <link href='/images/favicon.png' rel='icon' style='image/png'>
 </head>
 <body class='js-dashboard-index'>
 <div class='header'>
@@ -18,25 +18,25 @@
             <nav class='main-menu'>
                 <ul class='inline-list'>
                     <li class='inline-list__item is-active main-menu__item'>
-                        <a class="main-menu__link" href="/"><img alt="Dashboard Icon" class="main-menu__icon" src="/assets/images/icon-dashboard-b7fc48923a8411a5354a81b66e34b692.svg" />
+                        <a class="main-menu__link" href="/"><img alt="Dashboard Icon" class="main-menu__icon" src="/assets/icon-dashboard-b7fc48923a8411a5354a81b66e34b692.svg" />
                             <span class='main-menu__text'>Dashboard</span>
                         </a></li>
                     <li class='inline-list__item main-menu__item'>
-                        <a class="main-menu__link" href="/projects"><img alt="Projects Icon" class="main-menu__icon" src="/assets/images/icon-projects-f2e21fdd8c1a0dfc1b7e438396263705.svg" />
+                        <a class="main-menu__link" href="/projects"><img alt="Projects Icon" class="main-menu__icon" src="/assets/icon-projects-f2e21fdd8c1a0dfc1b7e438396263705.svg" />
                             <span class='main-menu__text'>Projects</span>
                         </a></li>
                     <li class='inline-list__item main-menu__item'>
-                        <a class="main-menu__link" href="/account"><img alt="Accounts Icon" class="main-menu__icon" src="/assets/images/icon-accounts-5573fc3b8b4b9b204d48ac0d24eb1799.svg" />
-                            <span class='main-menu__text'>Accounts</span>
+                        <a class="main-menu__link" href="/account"><img alt="Account icon" class="main-menu__icon" src="/assets/icon-accounts-5573fc3b8b4b9b204d48ac0d24eb1799.svg" />
+                            <span class='main-menu__text'>Account</span>
                         </a></li>
                     <li class='inline-list__item main-menu__item'>
-                        <a class="main-menu__link" href="/users"><img alt="Users Icon" class="main-menu__icon" src="/assets/images/icon-users-4d09e071ba1c6eed77353183a91a9e9c.svg" />
+                        <a class="main-menu__link" href="/users"><img alt="Users icon" class="main-menu__icon" src="/assets/icon-users-4d09e071ba1c6eed77353183a91a9e9c.svg" />
                             <span class='main-menu__text'>Users</span>
                         </a></li>
                 </ul>
             </nav>
             <div class='user-menu'>
-                <a class="js-toggle-nav" href="#" rel="nofollow"><img alt="shukai zhao&#39;s Avatar" class="user-menu__icon avatar-image" src="/assets/images/avatar.png" />
+                <a class="js-toggle-nav" href="#" rel="nofollow"><img alt="shukai zhao&#39;s Avatar" class="user-menu__icon avatar-image" src="/images/avatar.png" />
                 </a></div>
         </div>
     </div>
@@ -174,12 +174,12 @@
     </div>
 </div>
 
-<script src="/assets/js/cdn.viaduct.io/webpush.js"></script>
-<script src="/assets/js/application-e862757933c6bd8eeafac280f820e01c.js"></script>
+<script src="/assets/cdn.viaduct.io/webpush.js"></script>
+<script src="/assets/application-4490436fc5ec79a05e570d20adf462b5.js"></script>
 <script>
     //<![CDATA[
     window.Utility || (window.Utility = {});
-    Utility.RailsVars = {"user_timezone":null,"vwp_token":"13c9299896384ac5ac3cf68c"};
+    Utility.RailsVars = {"user_timezone":"Etc/UTC","vwp_token":"13c9299896384ac5ac3cf68c"};
 
     (function() {
         window.$this = new (App.Dashboard || App.Base)();
@@ -187,21 +187,22 @@
             return $this.index.call();
         }
     })();
+
     //]]>
 </script>
-<script src='/assets/js/identity/remote.js' type='text/javascript'></script>
+<script src='/assets/identity.atechmedia.com/javascripts/remote.js' type='text/javascript'></script>
 <script>
     //<![CDATA[
     var atechIdentity = new AtechIdentity();
     atechIdentity.host = 'http://pt.justdeployit.com';
     atechIdentity.userKey = '3b2662a4-843b-798f-417b-5755dda2e195';
     atechIdentity.applicationKey = '2a9869df-7c90-3f32-0538-0bec6f4c4129';
-    atechIdentity.expiry = 1420902610;
-    atechIdentity.authHash = 'ff21662b3371194c9e8880a7a0724c2f8132aff1';
+    atechIdentity.expiry = 1421374614;
+    atechIdentity.authHash = '682617ab70ecc9052d65602d1de71b5de8e7e032';
     atechIdentity.getRemoteUserData();
     //]]>
 </script>
 
-<!--- Version 23fc98, served by vdtapp-531-8977-b20c049ef8 -->
+<!--- Version 4f2bf0, served by vdtapp-531-9174-0e671c801d -->
 </body>
 </html>
