--- a/projects/deepphpoop/repository/index_provider.html
+++ b/projects/deepphpoop/repository/index_provider.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 <head>
     <meta content="authenticity_token" name="csrf-param" />
-    <meta content="laBOjZbXcHz2Vlufb95oRysGrNnebQP1pBO7NWuJXns=" name="csrf-token" />
+    <meta content="4KixzdUUL2+E/WLOW6xvPIK5ydNR5egmlK76+SB1KKk=" name="csrf-token" />
     <meta charset='utf-8'>
     <meta content='width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1' name='viewport'>
     <title>DeepPHPOOP - treetree - Deploy</title>
@@ -12,7 +12,7 @@
     <meta content='deepphpoop' name='project-id'>
     <link href='/projects/deepphpoop/deployments.rss?token=u2c0ljxymnztvid2l99yx0wbogc8g3the4e3tkr7' rel='alternate' title='Deployment History for DeepPHPOOP' type='application/rss+xml'>
 </head>
-<body class='js-notifications-index'>
+<body class='js-repositories-show'>
 <div class='header'>
     <div class='header__inner'>
         <div class='container'>
@@ -71,7 +71,7 @@
         <li class='second-menu__item'>
             <a class="second-menu__link" href="/projects/deepphpoop/deployments">Deployments</a>
         </li>
-        <li class='is-active is-dropdown second-menu__item'>
+        <li class='second-menu__item is-dropdown'>
             <a class="second-menu__link second-menu__link--dropdown" href="/projects/deepphpoop/edit">Settings</a>
             <ul class='sub-menu box box--heavy'>
                 <li class='sub-menu__item'>
@@ -86,22 +86,13 @@
                 <li class='sub-menu__item'>
                     <a class="sub-menu__link" href="/projects/deepphpoop/excluded_files">Excluded Files</a>
                 </li>
-                <li class='is-active sub-menu__item'>
+                <li class='sub-menu__item'>
                     <a class="sub-menu__link" href="/projects/deepphpoop/notifications">Notifications</a>
                 </li>
                 <li class='sub-menu__item'>
                     <a class="sub-menu__link" href="/projects/deepphpoop/commands">SSH Commands</a>
                 </li>
             </ul>
-        </li>
-        <li class='second-menu__item'>
-            <a href="https://github.com/shukai0828/DeepPHPOOP/tree/master">Browse Repository</a>
-        </li>
-        <li class='second-menu__item'>
-            <a href="https://github.com/shukai0828/DeepPHPOOP/commits/master">View Commits</a>
-        </li>
-        <li class='second-menu__item second-menu__item--deploy'>
-            <a href="/projects/deepphpoop/deployments/new">Deploy Now</a>
         </li>
     </ul>
     </div>
@@ -110,55 +101,44 @@
 
 <div class='container'>
     <div class='flash flash--spaced flash--neutral'>
-        <p>This project was last deployed 4 days ago to <strong>RoyalWebHosting</strong>. <a href="/projects/deepphpoop/deployments/6ac8f26c-17b6-8610-a1a5-8d6c240e3d0f">View details</a>.</p>
+        <p>This project hasn&rsquo;t been deployed yet. <a href="/projects/deepphpoop/deployments/new">Deploy now</a>.</p>
     </div>
 
 </div>
 <div class='container clearfix'>
 
-    <div class='section section--first section--with-create box'>
+    <div class='section section--first box'>
         <div class='page-header'>
-            <h2 class='page-header__title g-heading-alpha'>Notifications</h2>
-            <p class='page-header__lead'>
-                You can add notifications here which will automatically alert third-party services about your deployment each time you deploy your project.
-            </p>
-        </div>
-        <a class="button button--positive button--create section__create" href="/projects/deepphpoop/notifications/new" title="Configure a new type of notification"><img alt="Icon add" class="button__icon" src="/assets/icon-add-e0280f31016ead5fa85f6969fbd6f2db.svg" /></a>
-    </div>
-    <div class='content--constrained'>
-        <div class='section section--equal section--first box'>
-            <table class='table table--responsive'>
-                <thead>
-                <tr>
-                    <td>Description</td>
-                    <td>Counter</td>
-                    <td></td>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td class='u-text-center text--subtle text--italic' colspan='3'>No notifications have been set up for this project.</td>
-                </tr>
-                </tbody>
-            </table>
+            <h2 class='page-header__title g-heading-alpha'>Configure Repository Details</h2>
+            <p class='page-header__lead'>Every project in deploy needs to be linked to a source repository. This is the location where your source code will be taken from when deploying to your servers.</p>
         </div>
     </div>
-    <div class='sidebar'>
-        <div class='content-block'>
-            <h3 class='sidebar__heading g-heading-gamma'>Supported Services</h3>
-            <h4><a class="text--info" href="http://www.codebasehq.com/">Codebase</a></h4>
-            <p>You can make notifications to Codebase, the project management tool with built in repository hosting.</p>
-            <h4><a class="text--info" href="http://www.hipchat.com/">Hipchat</a></h4>
-            <p>Hipchat, the team collaboration chat system.</p>
-            <h4><a class="text--info" href="http://www.flowdock.com/">Flowdock</a></h4>
-            <p>Flowdock is a collaboration web app for technical teams.</p>
-            <h4><a class="text--info" href="http://www.newrelic.com/">New Relic</a></h4>
-            <p>New Relic allows you to profile the performance of your apps.</p>
-            <h4><a class="text--info" href="https://slack.com/">Slack</a></h4>
-            <p>Slack brings all your communication together in one place.</p>
-            <h4>HTTP Post</h4>
-            <p>Or your own services using HTTP Post notifications.</p>
+    <div class='content js-external-repo' data-provider='github'>
+        <div class='section section--first box'>
+            <h2 class='g-heading-beta form-heading'>Select your GitHub repository</h2>
+            <div class='box repo-select repo-select--github'>
+                <div class='repo-select__orgs'>
+                    <span class='repo-select__spacer g-text-italic g-text-small'>Organisations</span>
+                    <ul class='block-list'>
+                        <li class='block-list__item js-project'>
+                            <a class="block-list__link repo-org is-selected" data-project="null" href="#"><img alt="1166886?v=3" class="repo-org__avatar avatar-image" src="https://avatars.githubusercontent.com/u/1166886?v=3" />
+                                <span class='repo-org__name'>shukai0828</span>
+                            </a></li>
+                    </ul>
+                </div>
+                <div class='repo-select__repo'>
+                    <div class='repo-select__search'>
+                        <input class='form-control repo-select__search-input' placeholder='Filter repositories…' type='search'>
+                    </div>
+                    <ul class='block-list js-repos-list'>
+                        <li class='block-list__item'>
+                            <p class='g-text-center g-text-subtle block-list__link'>Loading repository list...</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
+
     </div>
 
 </div>
@@ -205,8 +185,8 @@
                 <a class="feedback-list__link js-feedback-form" href="#">Report Bug</a>
                 <div class='feedback-bar__form'>
                     <h2 class='form-heading g-heading-gamma'>Report Bug</h2>
-                    <form accept-charset="UTF-8" action="/feedback/report_bug" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="laBOjZbXcHz2Vlufb95oRysGrNnebQP1pBO7NWuJXns=" /></div>
-                        <input id="url" name="url" type="hidden" value="https://treetree.beta.deployhq.com/projects/deepphpoop/notifications?action=index&amp;controller=notifications&amp;project_id=deepphpoop" />
+                    <form accept-charset="UTF-8" action="/feedback/report_bug" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="4KixzdUUL2+E/WLOW6xvPIK5ydNR5egmlK76+SB1KKk=" /></div>
+                        <input id="url" name="url" type="hidden" value="https://treetree.beta.deployhq.com/projects/deepphpoop/repository?action=show&amp;controller=repositories&amp;project_id=deepphpoop&amp;provider=github" />
                         <div class='form-group'>
                             <label class="form-label" for="description">Describe Problem</label>
 <textarea class="textarea" id="description" name="description" rows="6">
@@ -227,7 +207,7 @@
                 <a class="feedback-list__link js-feedback-form" href="#">Feedback</a>
                 <div class='feedback-bar__form'>
                     <h2 class='form-heading g-heading-gamma'>Submit Feedback</h2>
-                    <form accept-charset="UTF-8" action="/feedback/feedback" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="laBOjZbXcHz2Vlufb95oRysGrNnebQP1pBO7NWuJXns=" /></div>
+                    <form accept-charset="UTF-8" action="/feedback/feedback" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="4KixzdUUL2+E/WLOW6xvPIK5ydNR5egmlK76+SB1KKk=" /></div>
                         <div class='form-group'>
                             <label class="form-label" for="summary">What do you think?</label>
 <textarea class="textarea" id="description" name="description" rows="6">
@@ -254,9 +234,9 @@
     Utility.RailsVars = {"user_timezone":"Etc/UTC","vwp_token":"13c9299896384ac5ac3cf68c","project":"deepphpoop"};
 
     (function() {
-        window.$this = new (App.Notifications || App.Base)();
-        if (typeof $this.index === 'function') {
-            return $this.index.call();
+        window.$this = new (App.Repositories || App.Base)();
+        if (typeof $this.show === 'function') {
+            return $this.show.call();
         }
     })();
 
@@ -269,12 +249,12 @@
     atechIdentity.host = 'http://pt.justdeployit.com';
     atechIdentity.userKey = '3b2662a4-843b-798f-417b-5755dda2e195';
     atechIdentity.applicationKey = '2a9869df-7c90-3f32-0538-0bec6f4c4129';
-    atechIdentity.expiry = 1421311885;
-    atechIdentity.authHash = 'd6964c7bb6ab024279af775306532334212247c4';
+    atechIdentity.expiry = 1421372404;
+    atechIdentity.authHash = 'fb93df55483b06608e62895e51e0e67f684c2ce6';
     atechIdentity.getRemoteUserData();
     //]]>
 </script>
 
-<!--- Version 4f2bf0, served by vdtapp-531-9175-535458ff20 -->
+<!--- Version 4f2bf0, served by vdtapp-531-9174-0e671c801d -->
 </body>
 </html>
