--- a/projects_edit_without_repository.html
+++ b/projects_edit_without_repository.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 <head>
     <meta content="authenticity_token" name="csrf-param" />
-    <meta content="laBOjZbXcHz2Vlufb95oRysGrNnebQP1pBO7NWuJXns=" name="csrf-token" />
+    <meta content="4KixzdUUL2+E/WLOW6xvPIK5ydNR5egmlK76+SB1KKk=" name="csrf-token" />
     <meta charset='utf-8'>
     <meta content='width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1' name='viewport'>
     <title>DeepPHPOOP - treetree - Deploy</title>
@@ -12,7 +12,7 @@
     <meta content='deepphpoop' name='project-id'>
     <link href='/projects/deepphpoop/deployments.rss?token=u2c0ljxymnztvid2l99yx0wbogc8g3the4e3tkr7' rel='alternate' title='Deployment History for DeepPHPOOP' type='application/rss+xml'>
 </head>
-<body class='js-notifications-index'>
+<body class='js-projects-edit'>
 <div class='header'>
     <div class='header__inner'>
         <div class='container'>
@@ -74,7 +74,7 @@
         <li class='is-active is-dropdown second-menu__item'>
             <a class="second-menu__link second-menu__link--dropdown" href="/projects/deepphpoop/edit">Settings</a>
             <ul class='sub-menu box box--heavy'>
-                <li class='sub-menu__item'>
+                <li class='is-active sub-menu__item'>
                     <a class="sub-menu__link" href="/projects/deepphpoop/edit">General Settings</a>
                 </li>
                 <li class='sub-menu__item'>
@@ -86,22 +86,13 @@
                 <li class='sub-menu__item'>
                     <a class="sub-menu__link" href="/projects/deepphpoop/excluded_files">Excluded Files</a>
                 </li>
-                <li class='is-active sub-menu__item'>
+                <li class='sub-menu__item'>
                     <a class="sub-menu__link" href="/projects/deepphpoop/notifications">Notifications</a>
                 </li>
                 <li class='sub-menu__item'>
                     <a class="sub-menu__link" href="/projects/deepphpoop/commands">SSH Commands</a>
                 </li>
             </ul>
-        </li>
-        <li class='second-menu__item'>
-            <a href="https://github.com/shukai0828/DeepPHPOOP/tree/master">Browse Repository</a>
-        </li>
-        <li class='second-menu__item'>
-            <a href="https://github.com/shukai0828/DeepPHPOOP/commits/master">View Commits</a>
-        </li>
-        <li class='second-menu__item second-menu__item--deploy'>
-            <a href="/projects/deepphpoop/deployments/new">Deploy Now</a>
         </li>
     </ul>
     </div>
@@ -110,54 +101,41 @@
 
 <div class='container'>
     <div class='flash flash--spaced flash--neutral'>
-        <p>This project was last deployed 4 days ago to <strong>RoyalWebHosting</strong>. <a href="/projects/deepphpoop/deployments/6ac8f26c-17b6-8610-a1a5-8d6c240e3d0f">View details</a>.</p>
+        <p>This project hasn&rsquo;t been deployed yet. <a href="/projects/deepphpoop/deployments/new">Deploy now</a>.</p>
     </div>
 
 </div>
 <div class='container clearfix'>
 
-    <div class='section section--first section--with-create box'>
-        <div class='page-header'>
-            <h2 class='page-header__title g-heading-alpha'>Notifications</h2>
-            <p class='page-header__lead'>
-                You can add notifications here which will automatically alert third-party services about your deployment each time you deploy your project.
-            </p>
-        </div>
-        <a class="button button--positive button--create section__create" href="/projects/deepphpoop/notifications/new" title="Configure a new type of notification"><img alt="Icon add" class="button__icon" src="/assets/icon-add-e0280f31016ead5fa85f6969fbd6f2db.svg" /></a>
-    </div>
     <div class='content--constrained'>
-        <div class='section section--equal section--first box'>
-            <table class='table table--responsive'>
-                <thead>
-                <tr>
-                    <td>Description</td>
-                    <td>Counter</td>
-                    <td></td>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td class='u-text-center text--subtle text--italic' colspan='3'>No notifications have been set up for this project.</td>
-                </tr>
-                </tbody>
-            </table>
+        <form accept-charset="UTF-8" action="/projects/deepphpoop" class="edit_project" id="edit_project_92743" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="_method" type="hidden" value="patch" /><input name="authenticity_token" type="hidden" value="4KixzdUUL2+E/WLOW6xvPIK5ydNR5egmlK76+SB1KKk=" /></div><div class='section section--first section--skinny box'>
+            <h2 class='form-heading'>Project Settings</h2>
+            <div class='form-group'>
+                <label class="form-label" for="project_name">Name</label>
+                <input class="form-control" id="project_name" name="project[name]" type="text" value="DeepPHPOOP" />
+                <p class='form-hint'>The name of a project is used to identify it within your Deploy account.</p>
+            </div>
+            <div class='form-group'>
+                <label class="form-label" for="project_notification_email">Notification Email Address</label>
+                <input class="form-control" id="project_notification_email" name="project[notification_email]" type="text" />
+                <p class='form-hint'>Leave blank to use users email address.</p>
+            </div>
         </div>
+            <div class='flash flash--info section--first'>
+                <p>You haven&rsquo;t added your repository settings yet. <a href="/projects/deepphpoop/repository">Add them now</a>.</p>
+            </div>
+            <div class='form-submit'>
+                <button class="button button--positive" name="button" type="submit">Save Changes</button>
+            </div>
+        </form>
+
     </div>
     <div class='sidebar'>
         <div class='content-block'>
-            <h3 class='sidebar__heading g-heading-gamma'>Supported Services</h3>
-            <h4><a class="text--info" href="http://www.codebasehq.com/">Codebase</a></h4>
-            <p>You can make notifications to Codebase, the project management tool with built in repository hosting.</p>
-            <h4><a class="text--info" href="http://www.hipchat.com/">Hipchat</a></h4>
-            <p>Hipchat, the team collaboration chat system.</p>
-            <h4><a class="text--info" href="http://www.flowdock.com/">Flowdock</a></h4>
-            <p>Flowdock is a collaboration web app for technical teams.</p>
-            <h4><a class="text--info" href="http://www.newrelic.com/">New Relic</a></h4>
-            <p>New Relic allows you to profile the performance of your apps.</p>
-            <h4><a class="text--info" href="https://slack.com/">Slack</a></h4>
-            <p>Slack brings all your communication together in one place.</p>
-            <h4>HTTP Post</h4>
-            <p>Or your own services using HTTP Post notifications.</p>
+            <h4 class='sidebar__heading g-heading-gamma'>Delete Project</h4>
+            <p>A project’s server information and configuration files can not be accessed once deleted.</p>
+            <p><a class="button button--negative" data-confirm="Are you sure you wish to remove this project?" data-method="delete" href="/projects/deepphpoop" rel="nofollow">Delete Project</a></p>
+            <p>If you need more space for projects, why not <a href="/billing/package">upgrade your account</a>?</p>
         </div>
     </div>
 
@@ -205,8 +183,8 @@
                 <a class="feedback-list__link js-feedback-form" href="#">Report Bug</a>
                 <div class='feedback-bar__form'>
                     <h2 class='form-heading g-heading-gamma'>Report Bug</h2>
-                    <form accept-charset="UTF-8" action="/feedback/report_bug" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="laBOjZbXcHz2Vlufb95oRysGrNnebQP1pBO7NWuJXns=" /></div>
-                        <input id="url" name="url" type="hidden" value="https://treetree.beta.deployhq.com/projects/deepphpoop/notifications?action=index&amp;controller=notifications&amp;project_id=deepphpoop" />
+                    <form accept-charset="UTF-8" action="/feedback/report_bug" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="4KixzdUUL2+E/WLOW6xvPIK5ydNR5egmlK76+SB1KKk=" /></div>
+                        <input id="url" name="url" type="hidden" value="https://treetree.beta.deployhq.com/projects/deepphpoop/edit?action=edit&amp;controller=projects&amp;id=deepphpoop" />
                         <div class='form-group'>
                             <label class="form-label" for="description">Describe Problem</label>
 <textarea class="textarea" id="description" name="description" rows="6">
@@ -227,7 +205,7 @@
                 <a class="feedback-list__link js-feedback-form" href="#">Feedback</a>
                 <div class='feedback-bar__form'>
                     <h2 class='form-heading g-heading-gamma'>Submit Feedback</h2>
-                    <form accept-charset="UTF-8" action="/feedback/feedback" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="laBOjZbXcHz2Vlufb95oRysGrNnebQP1pBO7NWuJXns=" /></div>
+                    <form accept-charset="UTF-8" action="/feedback/feedback" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="4KixzdUUL2+E/WLOW6xvPIK5ydNR5egmlK76+SB1KKk=" /></div>
                         <div class='form-group'>
                             <label class="form-label" for="summary">What do you think?</label>
 <textarea class="textarea" id="description" name="description" rows="6">
@@ -254,9 +232,9 @@
     Utility.RailsVars = {"user_timezone":"Etc/UTC","vwp_token":"13c9299896384ac5ac3cf68c","project":"deepphpoop"};
 
     (function() {
-        window.$this = new (App.Notifications || App.Base)();
-        if (typeof $this.index === 'function') {
-            return $this.index.call();
+        window.$this = new (App.Projects || App.Base)();
+        if (typeof $this.edit === 'function') {
+            return $this.edit.call();
         }
     })();
 
@@ -269,12 +247,12 @@
     atechIdentity.host = 'http://pt.justdeployit.com';
     atechIdentity.userKey = '3b2662a4-843b-798f-417b-5755dda2e195';
     atechIdentity.applicationKey = '2a9869df-7c90-3f32-0538-0bec6f4c4129';
-    atechIdentity.expiry = 1421311885;
-    atechIdentity.authHash = 'd6964c7bb6ab024279af775306532334212247c4';
+    atechIdentity.expiry = 1421371722;
+    atechIdentity.authHash = 'fa7b097792b2faec479b603223c56e6324818517';
     atechIdentity.getRemoteUserData();
     //]]>
 </script>
 
-<!--- Version 4f2bf0, served by vdtapp-531-9175-535458ff20 -->
+<!--- Version 4f2bf0, served by vdtapp-531-9174-0e671c801d -->
 </body>
 </html>
