--- a/users_edit.html
+++ b/users_edit.html
@@ -2,13 +2,13 @@
 <html lang='en'>
 <head>
     <meta content="authenticity_token" name="csrf-param" />
-    <meta content="QFy+K8j0wqfIVSkkd89qe/QEo2wgm/4H1FtjcbzE47I=" name="csrf-token" />
+    <meta content="YyvJGdeB6KmHOTGVNWGwPXlD00PLTiOFwngTc6Jr38c=" name="csrf-token" />
     <meta charset='utf-8'>
     <meta content='width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1' name='viewport'>
     <title>treetree - Deploy</title>
-    <link href="/assets/css/7257492/624966/css/fonts.css" media="screen" rel="stylesheet" />
-    <link href="/assets/css/application-4abd7d5764f0748a74fcf362045c3021.css" media="screen" rel="stylesheet" />
-    <link href='/assets/images/favicon.png' rel='icon' style='image:png'>
+    <link href="/assets/cloud.typography.com/7257492/624966/css/fonts.css" media="screen" rel="stylesheet" />
+    <link href="/assets/application-c2577e410b34fa9f4ea1e85a71113b0f.css" media="screen" rel="stylesheet" />
+    <link href='/images/favicon.png' rel='icon' style='image/png'>
 </head>
 <body class='js-users-edit'>
 <div class='header'>
@@ -18,25 +18,25 @@
             <nav class='main-menu'>
                 <ul class='inline-list'>
                     <li class='inline-list__item main-menu__item'>
-                        <a class="main-menu__link" href="/"><img alt="Dashboard Icon" class="main-menu__icon" src="/assets/images/icon-dashboard-b7fc48923a8411a5354a81b66e34b692.svg" />
+                        <a class="main-menu__link" href="/"><img alt="Dashboard Icon" class="main-menu__icon" src="/assets/icon-dashboard-b7fc48923a8411a5354a81b66e34b692.svg" />
                             <span class='main-menu__text'>Dashboard</span>
                         </a></li>
                     <li class='inline-list__item main-menu__item'>
-                        <a class="main-menu__link" href="/projects"><img alt="Projects Icon" class="main-menu__icon" src="/assets/images/icon-projects-f2e21fdd8c1a0dfc1b7e438396263705.svg" />
+                        <a class="main-menu__link" href="/projects"><img alt="Projects Icon" class="main-menu__icon" src="/assets/icon-projects-f2e21fdd8c1a0dfc1b7e438396263705.svg" />
                             <span class='main-menu__text'>Projects</span>
                         </a></li>
                     <li class='inline-list__item main-menu__item'>
-                        <a class="main-menu__link" href="/account"><img alt="Account icon" class="main-menu__icon" src="/assets/images/icon-accounts-5573fc3b8b4b9b204d48ac0d24eb1799.svg" />
+                        <a class="main-menu__link" href="/account"><img alt="Account icon" class="main-menu__icon" src="/assets/icon-accounts-5573fc3b8b4b9b204d48ac0d24eb1799.svg" />
                             <span class='main-menu__text'>Account</span>
                         </a></li>
                     <li class='inline-list__item is-active main-menu__item'>
-                        <a class="main-menu__link" href="/users"><img alt="Users icon" class="main-menu__icon" src="/assets/images/icon-users-4d09e071ba1c6eed77353183a91a9e9c.svg" />
+                        <a class="main-menu__link" href="/users"><img alt="Users icon" class="main-menu__icon" src="/assets/icon-users-4d09e071ba1c6eed77353183a91a9e9c.svg" />
                             <span class='main-menu__text'>Users</span>
                         </a></li>
                 </ul>
             </nav>
             <div class='user-menu'>
-                <a class="js-toggle-nav" href="#" rel="nofollow"><img alt="shukai zhao&#39;s Avatar" class="user-menu__icon avatar-image" src="/assets/images/avatar.png" />
+                <a class="js-toggle-nav" href="#" rel="nofollow"><img alt="shukai zhao&#39;s Avatar" class="user-menu__icon avatar-image" src="/images/avatar.png" />
                 </a></div>
         </div>
     </div>
@@ -65,10 +65,10 @@
     <div class='section section--first box'>
         <div class='page-header'>
             <h2 class='page-header__title g-heading-alpha u-margin-zero'>Edit User</h2>
-            <img alt="pheonix zhao&#39;s Gravatar" class="page-header__icon" src="/assets/images/avatar.png" />
+            <img alt="pheonix zhao&#39;s Gravatar" class="page-header__icon" src="/images/avatar.png" />
         </div>
     </div>
-    <form accept-charset="UTF-8" action="/users/c9f3055b-ed27-5a83-0207-3d1abf995e7a" class="edit_user" id="edit_user_42880" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="_method" type="hidden" value="patch" /><input name="authenticity_token" type="hidden" value="QFy+K8j0wqfIVSkkd89qe/QEo2wgm/4H1FtjcbzE47I=" /></div><div class='content--constrained'>
+    <form accept-charset="UTF-8" action="/users/7400e1e3-6228-b4cf-77b2-0ae2f02e97f9" class="edit_user" id="edit_user_43024" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="_method" type="hidden" value="patch" /><input name="authenticity_token" type="hidden" value="YyvJGdeB6KmHOTGVNWGwPXlD00PLTiOFwngTc6Jr38c=" /></div><div class='content--constrained'>
 
         <div class='section section--skinny section--first box'>
             <h3 class='form-heading g-heading-beta u-margin-zero'>Personal Details</h3>
@@ -135,7 +135,7 @@
         <div class='content-block'>
             <h3 class='sidebar__heading g-heading-gamma'>Delete User</h3>
             <p class='g-text-subtle'>If you wish to remove this user from your account they will no longer have access to deploy your projects.</p>
-            <p><form action="/users/c9f3055b-ed27-5a83-0207-3d1abf995e7a" class="button_to" method="post"><div><input name="_method" type="hidden" value="delete" /><input class="button button--negative" confirm="Are you sure you wish to remove this user?" type="submit" value="Delete User" /><input name="authenticity_token" type="hidden" value="QFy+K8j0wqfIVSkkd89qe/QEo2wgm/4H1FtjcbzE47I=" /></div></form></p>
+            <p><form action="/users/7400e1e3-6228-b4cf-77b2-0ae2f02e97f9" class="button_to" method="post"><div><input name="_method" type="hidden" value="delete" /><input class="button button--negative" confirm="Are you sure you wish to remove this user?" type="submit" value="Delete User" /><input name="authenticity_token" type="hidden" value="YyvJGdeB6KmHOTGVNWGwPXlD00PLTiOFwngTc6Jr38c=" /></div></form></p>
         </div>
     </div>
 
@@ -169,7 +169,7 @@
                 </ul>
             </div>
             <div class='column column--quarter'>
-                <a class="footer__branding" href="http://atechmedia.com"><img alt="Atechmedia logo" src="/assets/images/atechmedia-logo-0c4d3f231c616ea3edec833d64afb407.png" /></a>
+                <a class="footer__branding" href="http://atechmedia.com"><img alt="Atechmedia logo" src="/assets/atechmedia-logo-0c4d3f231c616ea3edec833d64afb407.png" /></a>
             </div>
         </div>
         <p class='footer__copyright'>&copy; 2015 <a href="http://atechmedia.com">aTech Media Limited</a>. All rights reserved.</p>
@@ -183,8 +183,8 @@
                 <a class="feedback-list__link js-feedback-form" href="#">Report Bug</a>
                 <div class='feedback-bar__form'>
                     <h2 class='form-heading g-heading-gamma'>Report Bug</h2>
-                    <form accept-charset="UTF-8" action="/feedback/report_bug" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="QFy+K8j0wqfIVSkkd89qe/QEo2wgm/4H1FtjcbzE47I=" /></div>
-                        <input id="url" name="url" type="hidden" value="https://treetree.beta.deployhq.com/users/c9f3055b-ed27-5a83-0207-3d1abf995e7a/edit?action=edit&amp;controller=users&amp;id=c9f3055b-ed27-5a83-0207-3d1abf995e7a" />
+                    <form accept-charset="UTF-8" action="/feedback/report_bug" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="YyvJGdeB6KmHOTGVNWGwPXlD00PLTiOFwngTc6Jr38c=" /></div>
+                        <input id="url" name="url" type="hidden" value="https://treetree.beta.deployhq.com/users/7400e1e3-6228-b4cf-77b2-0ae2f02e97f9/edit?action=edit&amp;controller=users&amp;id=7400e1e3-6228-b4cf-77b2-0ae2f02e97f9" />
                         <div class='form-group'>
                             <label class="form-label" for="description">Describe Problem</label>
 <textarea class="textarea" id="description" name="description" rows="6">
@@ -205,7 +205,7 @@
                 <a class="feedback-list__link js-feedback-form" href="#">Feedback</a>
                 <div class='feedback-bar__form'>
                     <h2 class='form-heading g-heading-gamma'>Submit Feedback</h2>
-                    <form accept-charset="UTF-8" action="/feedback/feedback" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="QFy+K8j0wqfIVSkkd89qe/QEo2wgm/4H1FtjcbzE47I=" /></div>
+                    <form accept-charset="UTF-8" action="/feedback/feedback" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="YyvJGdeB6KmHOTGVNWGwPXlD00PLTiOFwngTc6Jr38c=" /></div>
                         <div class='form-group'>
                             <label class="form-label" for="summary">What do you think?</label>
 <textarea class="textarea" id="description" name="description" rows="6">
@@ -224,12 +224,12 @@
     </div>
 </div>
 
-<script src="/assets/js/cdn.viaduct.io/webpush.js"></script>
-<script src="/assets/js/application-4050524b872d18d5132f11c99b6d4bf2.js"></script>
+<script src="/assets/cdn.viaduct.io/webpush.js"></script>
+<script src="/assets/application-4490436fc5ec79a05e570d20adf462b5.js"></script>
 <script>
     //<![CDATA[
     window.Utility || (window.Utility = {});
-    Utility.RailsVars = {"user_timezone":"Etc/UTC","vwp_token":"13c9299896384ac5ac3cf68c","user":"c9f3055b-ed27-5a83-0207-3d1abf995e7a"};
+    Utility.RailsVars = {"user_timezone":"Etc/UTC","vwp_token":"13c9299896384ac5ac3cf68c","user":"7400e1e3-6228-b4cf-77b2-0ae2f02e97f9"};
 
     (function() {
         window.$this = new (App.Users || App.Base)();
@@ -240,19 +240,19 @@
 
     //]]>
 </script>
-<script src='/assets/js/identity/remote.js' type='text/javascript'></script>
+<script src='/assets/identity.atechmedia.com/javascripts/remote.js' type='text/javascript'></script>
 <script>
     //<![CDATA[
     var atechIdentity = new AtechIdentity();
     atechIdentity.host = 'http://pt.justdeployit.com';
     atechIdentity.userKey = '3b2662a4-843b-798f-417b-5755dda2e195';
     atechIdentity.applicationKey = '2a9869df-7c90-3f32-0538-0bec6f4c4129';
-    atechIdentity.expiry = 1421165261;
-    atechIdentity.authHash = '3943ddbff7275a88b34c696aec6ccf3edfd4454d';
+    atechIdentity.expiry = 1421335423;
+    atechIdentity.authHash = '3ae9baa159c842a7bb45a8d82e4250e08fad6e69';
     atechIdentity.getRemoteUserData();
     //]]>
 </script>
 
-<!--- Version b725e2, served by vdtapp-531-9156-bdb94a2da9 -->
+<!--- Version 4f2bf0, served by vdtapp-531-9174-0e671c801d -->
 </body>
 </html>
